Remove some src/s files that are now empty
* configure.ac (opsysfile): Set to empty on gnu, cygwin.

* src/s/bsd-common, src/s/cygwin.h: Remove empty files.
* src/s/freebsd.h, src/s/netbsd.h: Do not include bsd-common.h.

--- a/configure.ac
+++ b/configure.ac
@@ -3615,6 +3615,7 @@ case $opsys in
     ;;
 
   cygwin)
+    opsysfile=
     AC_DEFINE(CYGWIN, 1, [Define if the system is Cygwin.])
     ;;
 
@@ -3687,7 +3688,7 @@ case $opsys in
       using GTK.])
     ;;
 
-  gnu) opsysfile="s/bsd-common.h" ;;
+  gnu) opsysfile= ;;
 
   gnu-kfreebsd) opsysfile="s/gnu-linux.h" ;;
 
