Fix toolkit configuration report. * configure.ac (USE_X_TOOLKIT): Report toolkit as GTK3 if --with-x-toolkit=gtk3 is used.

--- a/configure.ac
+++ b/configure.ac
@@ -4298,7 +4298,11 @@ End:
 #### It makes printing result more understandable as using GTK sets
 #### toolkit_scroll_bars to yes by default.
 if test "${HAVE_GTK}" = "yes"; then
-  USE_X_TOOLKIT=GTK
+  if test "${with_gtk3}" = "yes"; then
+    USE_X_TOOLKIT=GTK3
+  else
+    USE_X_TOOLKIT=GTK
+  fi
 fi
 
 echo "
