Move _longjmp, _setjmp from src/s to configure
* configure.ac (_longjmp, _setjmp): Move here from src/s.

* src/s/usg5-4-common.h (_longjmp, _setjmp): Let configure set them.
* src/s/irix6-5.h (_longjmp, _setjmp): No more need to undefine.

--- a/configure.ac
+++ b/configure.ac
@@ -3631,6 +3631,15 @@ else
   esac
 fi                              dnl GCC?
 
+case $opsys in
+  sol2* | unixware )
+    dnl setjmp and longjmp can safely replace _setjmp and _longjmp,
+    dnl but they will run more slowly.
+    AC_DEFINE(_setjmp, setjmp, [Some platforms redefine this.])
+    AC_DEFINE(_longjmp, longjmp, [Some platforms redefine this.])
+    ;;
+esac
+
 
 dnl Used in xfaces.c.
 case $opsys in
