--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -391,6 +391,7 @@ LIBES = $(LIBS) $(LIBX_BASE) $(LIBX_OTHER) $(LIBSOUND) \
    $(LIB_GCC) $(LIB_MATH) $(LIB_STANDARD) $(LIB_GCC)
 
 all: emacs$(EXEEXT) $(OTHER_FILES)
+.PHONY: all
 
 $(leimdir)/leim-list.el: bootstrap-emacs$(EXEEXT)
 	cd $(leimdir) && $(MAKE) $(MFLAGS) leim-list.el EMACS=$(bootstrap_exe)
@@ -496,6 +497,8 @@ doc.o: buildobj.h
 ## If HAVE_NS, some ns-specific rules (for OTHER_FILES) are inserted here.
 @ns_frag@
 
+.PHONY: mostlyclean clean bootstrap-clean distclean maintainer-clean
+.PHONY: versioclean extraclean frc
 
 mostlyclean:
 	rm -f temacs$(EXEEXT) core *.core \#* *.o libXMenu11.a liblw.a
