Use an include file in configure.ac's AH_BOTTOM
* configure.ac (AH_BOTTOM): Use an include file, so that the
contents do not get processed by autoheader.  Eg this prevents undefs
being commented out, and is the recommended technique from the
autoconf manual.

* src/conf_post.h: New, split from configure.ac's AH_BOTTOM.

* src/Makefile.in (config_h): Add conf_post.h.
* src/makefile.w32-in (CONFIG_H): Add conf_post.h.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -57,7 +57,7 @@ lispdir = ../lisp
 
 # Configuration files for .o files to depend on.
 S_FILE = @S_FILE@
-config_h = config.h $(S_FILE)
+config_h = config.h conf_post.h $(S_FILE)
 
 bootstrap_exe = $(abs_builddir)/bootstrap-emacs$(EXEEXT)
 
