--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -406,6 +406,7 @@ CODING_H       = $(SRC)/coding.h \
 MS_W32_H       = $(SRC)/s/ms-w32.h \
 		 $(NT_INC)/sys/stat.h
 CONFIG_H       = $(SRC)/config.h \
+		 $(SRC)/conf_post.h \
 		 $(MS_W32_H)
 DIR_H          = $(NT_INC)/sys/dir.h \
 		 $(SRC)/ndir.h
