Remove src/s/darwin.h
* configure.ac (opsysfile): Set to empty on darwin.

* src/conf_post.h [DARWIN_OS]: Move remaining contents of src/s/darwin.h here.

* src/s/darwin.h: Remove file.

--- a/configure.ac
+++ b/configure.ac
@@ -3688,6 +3688,7 @@ case $opsys in
     ;;
 
   darwin)
+    opsysfile=
     dnl BSD4_3 and BSD4_4 are already defined in sys/param.h.
     AC_DEFINE(BSD4_2, [])
     AC_DEFINE(BSD_SYSTEM, [])
