Remove src/s/irix6-5.h
* configure.ac (opsysfile): Set to s/usg5-4-common.h on irix6-5.

* src/conf_post.h [IRIX6_5]: Move remaining contents of s/irix6-5.h here.

* src/s/irix6-5.h: Remove file.

--- a/configure.ac
+++ b/configure.ac
@@ -3731,6 +3731,7 @@ case $opsys in
     ;;
 
   irix6-5)
+    opsysfile="s/usg5-4-common.h"
     AC_DEFINE(USG, [])
     AC_DEFINE(USG5, [])
     AC_DEFINE(IRIX6_5, [], [Define if the system is IRIX.])
