--- a/lib-src/makefile.w32-in
+++ b/lib-src/makefile.w32-in
@@ -360,7 +360,7 @@ SRC		= $(EMACS_ROOT)/src
 NT_INC		= $(EMACS_ROOT)/nt/inc
 GNU_LIB		= $(EMACS_ROOT)/lib
 
-MS_W32_H       = $(SRC)/s/ms-w32.h \
+MS_W32_H       = $(NT_INC)/ms-w32.h \
 		 $(NT_INC)/sys/stat.h
 CONF_POST_H    = $(SRC)/conf_post.h \
 		 $(MS_W32_H)
