--- a/lib/makefile.w32-in
+++ b/lib/makefile.w32-in
@@ -1,5 +1,5 @@
 # -*- Makefile -*- for GNU Emacs on the Microsoft Windows API.
-# Copyright (C) 2011 Free Software Foundation, Inc.
+# Copyright (C) 2011-2012 Free Software Foundation, Inc.
 
 # This file is part of GNU Emacs.
 
@@ -71,7 +71,7 @@ NT_INC		= $(EMACS_ROOT)/nt/inc
 
 C_CTYPE_H      = $(GNU_LIB)/c-ctype.h \
 		 $(NT_INC)/stdbool.h
-MS_W32_H       = $(SRC)/s/ms-w32.h \
+MS_W32_H       = $(NT_INC)/ms-w32.h \
 		 $(NT_INC)/sys/stat.h
 CONF_POST_H    = $(SRC)/conf_post.h \
 		 $(MS_W32_H)
